# TinyWhisper

./: .designinit  .gitignore  .gitmodules  .nojekyll  CITATION.cff  LICENSE  README.md  ToDo.md  index.html  robots.txt  search.json  sitemap.xml
.github/workflows/: quarto-publish.yml
doc/: .gitignore  Makefile  _quarto.yml  index.qmd  requirements.txt
doc/fig/: Makefile  TinyWhisper_architecture.drawio  fec.tex
enclosure/: README.md
ihp130/: Makefile  README.md  flake.nix  pdk_hash.mk
ihp130/cocotb/: enable_test.surf.ron  i2c_rw_test.txt  tinywhisper_top_tb.py
ihp130/doc/klayout/: klayout_cheatsheet.md
ihp130/doc/naming/: files_naming_convention.txt  vhdl_naming_convention.txt
ihp130/flow/librelane/: config.yaml  pdn_cfg.tcl
ihp130/flow/reports/: lvs.netgen.rpt  yosys_post_dff.rpt
ihp130/gds/: IMPORTANT_INFO.md
ihp130/ip/bondpad_70x70/: Makefile  README.md
ihp130/ip/sg13g2_ip__bondpad_70x70/: Makefile
ihp130/ip/sg13g2_ip__ce/: Makefile  README.md
ihp130/ip/sg13g2_ip__ce_names/: Makefile  README.md
ihp130/ip/sg13g2_ip__jku/: Makefile  README.md
ihp130/ip/sg13g2_ip__jku_names/: Makefile  README.md
ihp130/librelane/: config.yaml
ihp130/macros/iqmod/: Makefile  README.md
ihp130/macros/riscv/: Makefile  README.md
ihp130/pnl/: tinywhisper_top.pnl.v
ihp130/reports/: hold_setup_timing.rpt  lvs.netgen.rpt  stat.rpt  yosys_pre_techmap.rpt  yosys_synth_check.rpt
ihp130/rtl/: tinywhisper_core.sv  tinywhisper_top.sv
ihp130/schematic/: tinywhisper.sch  tinywhisper_top.sch
ihp130/scripts/: add_logo_fill.sh  add_rectangle.py  gds_xor.py  lay2img.py
ihp130/src/: tinywhisper_core.sv  tinywhisper_top.sv
ihp130/xschem/: tinywhisper.sym  tinywhisper_top.sch  xschemrc
measurements/: README.md
packaging/: README.md
pcb/: README.md
presentations/: README.md
sky130/: README.md
sky130/cace/: wspr_tx_iqmod_mfb_lpf.yaml
sky130/librelane/: config.yaml  pin_order.cfg  run_librelane.sh
sky130/magic/: sky130_fd_pr__nfet_01v8_4FXFJ2.mag  sky130_fd_pr__nfet_01v8_98DYX6.mag  sky130_fd_pr__pfet_01v8_3HM6GL.mag  sky130_fd_pr__pfet_01v8_JBTYG7.mag  sky130_fd_pr__pfet_01v8_KBTFAN__0.mag  sky130_fd_pr__pfet_01v8_lvt_P4JB26.mag  sky130_fd_pr__pfet_01v8_lvt_P4QH36.mag  wspr_tx_iqmod.mag  wspr_tx_iqmod_mfb_lpf_ota_core_hybrid_bm.mag  wspr_tx_iqmod_mfb_lpf_ota_core_inv_lv_NF4.mag  wspr_tx_iqmod_mfb_lpf_res_p.mag  wspr_tx_iqmod_mfb_lpf_wo_cap.mag  wspr_tx_iqmod_mixer.mag  wspr_tx_iqmod_mixer_lo_logic.mag  wspr_tx_iqmod_mixer_lo_logic_inv_NF1.mag  wspr_tx_iqmod_mixer_lo_logic_inv_NF6.mag  wspr_tx_iqmod_top_wo_labels.mag
sky130/verilog/rtl/: memory.sv  (+8 more)
sky130/xschem/: lc_bp_filter.sch  single2cm.sch  single2dm.sym  wspr_tx_iqmod_mfb_lpf_ota_core_hybrid_bm.sch  wspr_tx_iqmod_mfb_lpf_pex.sym  wspr_tx_iqmod_mixer_lo_logic.sch  wspr_tx_top.sch  wspr_tx_top.sym  xschemrc
software/: README.md  generate_tests.py  program_fpga_uart.py  test_wspr.py  wspr.py
software/c_toolchain/: .gitignore  CMakeLists.txt  README.md  csr.c  csr.h  demo.c  hardware_test.c  interrupts.c  interrupts.h  mmio.c  mmio.h  program_sram.py  readable.sh  riscv.ld  start.s  syscalls.c  wspr.c  wspr.h
software/c_toolchain/cmake/: toolchain.cmake
(+908 files in other folders)
